# llm-as-a-judge-sample

./: README.md  evaluation.ipynb  generation.ipynb  pyproject.toml
src/: models.py  types.py
src/data/: __init__.py  evaluation_dataset.json  generation_dataset.json  prompt_dataset.json  rubrics.json
src/data/evaluation_result/2025-12-15-00-38-12/: free_form.json  rubric.json
src/data/evaluation_result/2025-12-15-00-40-46/: free_form.json  rubric.json  subjective.json
src/data/evaluation_result/2025-12-15-00-43-28/: free_form.json  rubric.json  subjective.json
src/data/evaluation_result/2025-12-15-00-46-01/: free_form.json  rubric.json
src/data/evaluation_result/2025-12-15-00-48-37/: free_form.json  rubric.json  subjective.json
src/data/evaluation_result/2025-12-15-00-51-11/: free_form.json  rubric.json  subjective.json
src/data/evaluation_result/2025-12-15-00-53-43/: free_form.json  rubric.json  subjective.json
src/data/evaluation_result/2025-12-15-00-56-17/: free_form.json  rubric.json  subjective.json
src/data/evaluation_result/2025-12-15-00-58-52/: free_form.json  rubric.json  subjective.json
src/data/evaluation_result/2025-12-15-01-01-26/: free_form.json  rubric.json  subjective.json
src/data/evaluation_result/2025-12-15-01-21-21/: free_form.json  rubric.json
src/data/evaluation_result/2025-12-15-01-23-59/: free_form.json  rubric.json  subjective.json
src/data/evaluation_result/2025-12-15-01-26-35/: free_form.json  rubric.json
src/evaluator/: evaluator.py  prompt.py
src/generator/: generator.py  prompt.py
(+207 files in other folders)
