[project]
name = "llm-as-a-judge-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "google-genai>=0.2.0",
  "ipykernel>=7.1.0",
  "pydantic>=2.0.0",
  "anthropic>=0.75.0",
  "tqdm>=4.66.0",
  "ipywidgets>=8.0.0",
]
